--- a/presentation.html
+++ b/presentation.html
@@ -10,12 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
     /* Konecta Brand Theme:
-      - Konecta Blue: #0f0f72
+      - Konecta Blue: #2900c9
       - Konecta Dark: #2900c9
       - Konecta Yellow: #f0fa00
     */
     :root {
-        --konecta-blue: #0f0f72;
+        --konecta-blue: #2900c9;
         --konecta-dark: #2900c9;
         --konecta-yellow: #f0fa00;
     }
